# optscale_client

./: .gitignore  README.md  client.py  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_pr.yaml
optscale_client/: __init__.py  client.py
optscale_client/arcee/: client.py
optscale_client/insider/: client.py
optscale_client/metroculus/: client.py
optscale_client/rest_api/: client.py  client_v2.py
