# setup.cfg
[metadata]
name = optscale-client
version = 0.1.0
author = Hystax
description = Client library for OptScale
long_description = file: README.md
long_description_content_type = text/markdown
license = "Apache License 2.0"
url = https://my.optscale.com/
project_urls=
    Source = https://github.com/hystax/optscale_client
keywords = optscale, finops, mlops
[options]
python_requires = >=3.4, <4
install_requires =
    requests==2.25.0
    retrying==1.3.3
packages = find:
package_dir =
    =.
test =
    tox
[options.packages.find]
where = .
exclude =
